--- a/index.html
+++ b/index.html
@@ -14,13 +14,33 @@
     </header>
 
     <div class="filters">
-      <button id="getImageBtn">Fetch Space Images</button>
+      <label for="startDate" class="visually-hidden">Start date</label>
+      <input type="date" id="startDate" name="startDate" />
+
+      <button id="getImageBtn">Get Space Images</button>
+    </div>
+
+    <!-- Random fact area (rotates on load) -->
+    <div id="randomFact" class="random-fact">
+      <!-- Filled by JS -->
     </div>
 
     <div id="gallery" class="gallery">
       <div class="placeholder">
         <div class="placeholder-icon">🔭</div>
         <p>Click "Fetch Space Images" to explore the cosmos!</p>
+      </div>
+    </div>
+
+    <!-- Modal for details -->
+    <div id="modal" class="modal hidden" aria-hidden="true">
+      <div class="modal-backdrop" id="modalBackdrop"></div>
+      <div class="modal-content" role="dialog" aria-modal="true">
+        <button id="modalClose" class="modal-close" aria-label="Close">✕</button>
+        <div id="modalMedia" class="modal-media"></div>
+        <h2 id="modalTitle"></h2>
+        <p id="modalDate" class="modal-date"></p>
+        <p id="modalExplanation" class="modal-explanation"></p>
       </div>
     </div>
   </div>
